crates/structurizr-analysis/tests/snapshots/document_snapshots__document_snapshot@identifiers__assigned_identifiers_ok.snap
---
source: crates/structurizr-analysis/tests/document_snapshots.rs
expression: "SnapshotView::from(&snapshot)"
---
SnapshotView {
    has_syntax_errors: false,
    diagnostics: [],
    include_directives: [],
    identifier_modes: [],
    symbols: [
        Symbol {
            id: SymbolId(
                0,
            ),
            kind: Person,
            display_name: "User",
            binding_name: Some(
                "user",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 32,
                    end_byte: 36,
                    start_point: TextPoint {
                        row: 2,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 2,
                        column: 12,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 32,
                end_byte: 52,
                start_point: TextPoint {
                    row: 2,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 2,
                    column: 28,
                },
            },
            parent: None,
            syntax_node_kind: "person",
        },
        Symbol {
            id: SymbolId(
                1,
            ),
            kind: SoftwareSystem,
            display_name: "System",
            binding_name: Some(
                "system",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 61,
                    end_byte: 67,
                    start_point: TextPoint {
                        row: 3,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 3,
                        column: 14,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 61,
                end_byte: 199,
                start_point: TextPoint {
                    row: 3,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 7,
                    column: 9,
                },
            },
            parent: None,
            syntax_node_kind: "software_system",
        },
        Symbol {
            id: SymbolId(
                2,
            ),
            kind: Container,
            display_name: "API",
            binding_name: Some(
                "api",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 108,
                    end_byte: 111,
                    start_point: TextPoint {
                        row: 4,
                        column: 12,
                    },
                    end_point: TextPoint {
                        row: 4,
                        column: 15,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 108,
                end_byte: 189,
                start_point: TextPoint {
                    row: 4,
                    column: 12,
                },
                end_point: TextPoint {
                    row: 6,
                    column: 13,
                },
            },
            parent: Some(
                SymbolId(
                    1,
                ),
            ),
            syntax_node_kind: "container",
        },
        Symbol {
            id: SymbolId(
                3,
            ),
            kind: Component,
            display_name: "Worker",
            binding_name: Some(
                "worker",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 148,
                    end_byte: 154,
                    start_point: TextPoint {
                        row: 5,
                        column: 16,
                    },
                    end_point: TextPoint {
                        row: 5,
                        column: 22,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 148,
                end_byte: 175,
                start_point: TextPoint {
                    row: 5,
                    column: 16,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 43,
                },
            },
            parent: Some(
                SymbolId(
                    2,
                ),
            ),
            syntax_node_kind: "component",
        },
        Symbol {
            id: SymbolId(
                4,
            ),
            kind: SoftwareSystem,
            display_name: "Platform",
            binding_name: Some(
                "platform",
            ),
            binding_span: Some(
                TextSpan {
                    start_byte: 208,
                    end_byte: 216,
                    start_point: TextPoint {
                        row: 8,
                        column: 8,
                    },
                    end_point: TextPoint {
                        row: 8,
                        column: 16,
                    },
                },
            ),
            span: TextSpan {
                start_byte: 208,
                end_byte: 244,
                start_point: TextPoint {
                    row: 8,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 8,
                    column: 44,
                },
            },
            parent: None,
            syntax_node_kind: "software_system",
        },
    ],
    references: [],
}
